Fix translations & layout bugs

--- a/app/components/Pin.sass
+++ b/app/components/Pin.sass
@@ -1,5 +1,5 @@
 .pin
-  flex: 0 0 550px
+  flex: 0 0 620px
   margin: 1em
   border: 1px solid #bdc3c7
   box-sizing: border-box
